# homehub

backend/: db.sqlite3  pyproject.toml
backend/core/: models.py  serializers.py  urls.py  views.py
backend/core/device_modules/: device_schema.py
backend/core/migrations/: 0001_initial.py  0002_rename_config_schema_device_config_and_more.py  0003_device_ip_address_device_mac_address.py
backend/smart_home_backend/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  DeviceTest.tsx  index.css  main.tsx
frontend/src/api/: ApiError.tsx  ApiService.tsx  UnAuthApiService.tsx
frontend/src/components/: AppInitialiser.tsx  FloatingAddButton.tsx  NavBar.tsx  SideBar.tsx  ToolTip.tsx
frontend/src/components/Fields/: Fields.tsx
frontend/src/components/Modals/: AddDeviceModal.tsx  GenericModal.tsx
frontend/src/pages/: DevicesPage.tsx  FloorPlanPage.tsx  HomePage.tsx  LoginPage.tsx  LogoutPage.tsx
frontend/src/redux/: store.tsx
frontend/src/redux/slices/: AuthSlice.tsx  CreateModelSlice.tsx  DeviceTypesSlice.tsx  FloorPlansSlice.tsx  RoomsSlice.tsx  devicesSlice.tsx
frontend/src/redux/thunks/: apiThunkHelper.tsx
frontend/src/styles/: custom-checkbox.css
frontend/src/utils/: Cookie.tsx  Token.tsx  UseAppDispatch.tsx  url.tsx
